--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,13 +1,27 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Регистрация{% endblock %}
 
 {% block body %}
+<style>
+    .auth-block {
+        padding: 30px;
+        width: 300px;
+        margin: 50px auto;
+        border: 1px solid grey;
+        background-color: #f5f5f5;
+    }
+    .lab {
+        float: left;
+    }
+</style>
+
+<div class="container">
+    <div class="auth-block text-center">
     {% for flash_error in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
-
-    <h1>Register</h1>
+    <h1 class="h3 mb-3 fw-normal">Регистрация</h1>
 
     {{ form_errors(registrationForm) }}
 
@@ -18,6 +32,8 @@
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn">Зарегистрироваться</button>
     {{ form_end(registrationForm) }}
+    </div>
+</div>
 {% endblock %}
