--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,33 +1,55 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Авторизация{% endblock %}
+{% block stylesheets %}
+    <style>
+        .auth-block {
+            padding: 30px;
+            width: 400px;
+            margin: 50px auto;
+            border: 1px solid grey;
+            background-color: #f5f5f5;
+        }
+        .lab {
+            float: left;
+        }
+    </style>
+{% endblock %}
 
 {% block body %}
 <div class="container">
-    <form method="post">
-        {% if error %}
-            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %}
-
-        {% if app.user %}
+    <div class="auth-block text-center">
+        <form method="post">
+            {% if error %}
+                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            {% endif %}
+            {% if app.user %}
+                <div class="mb-3">
+                    Вы авторизованы как {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Выйти</a>
+                </div>
+            {% endif %}
+            <h1 class="h3 mb-3 fw-normal">Авторизация</h1>
             <div class="mb-3">
-                You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+                <label for="inputEmail" class="form-label lab">Email:</label>
+                <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus placeholder="Введите email">
             </div>
-        {% endif %}
-
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="inputEmail">Email</label>
-        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-        <label for="inputPassword">Password</label>
-        <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-        <input type="hidden" name="_csrf_token"
-               value="{{ csrf_token('authenticate') }}"
-        >
-
-        <button class="btn btn-lg btn-primary" type="submit">
-            Sign in
-        </button>
-    </form>
+            <div class="mb-3">
+                <label for="inputPassword" class="form-label lab">Пароль:</label>
+                <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required placeholder="Введите пароль">
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+            </div>
+            <div class="mb-3">
+                <label class="float-start"><input type="checkbox" value="remember-me"> Запомнить меня</label>
+            </div>
+            <button class="mt-3 w-100 btn btn-lg btn-primary" type="submit">Войти</button>
+            <div class="mt-3 mb-3">
+                <a href="#">Забыли пароль?</a>
+            </div>
+            <div class="clearfix">
+                <div class="float-start"><a href="{{ path('app_index') }}">На главную</a></div>
+                <div class="float-end">Нет аккаунта? <a href="{{ path('app_register') }}">Регистрация</a></div>
+            </div>
+        </form>
+    </div>
 </div>
 {% endblock %}
