--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -1,11 +1,15 @@
 <table class="table table-bordered">
-    <thead>
-    <tr>
-        <th class="text-center">#</th>
-        <th class="text-center">№</th>
-        <th class="text-center">Название</th>
-        <th class="text-center">Контент</th>
-    </tr>
+    <thead class="table-light">
+        <tr>
+            <th class="text-center">#</th>
+            <th class="text-center">№</th>
+            <th class="text-center">Название</th>
+            <th class="text-center">Контент</th>
+            <th class="text-center">Рейтинг</th>
+            {% if app.user %}
+                <th></th>
+            {% endif %}
+        </tr>
     </thead>
     <tbody id="tasks-table-body">
     {% set num = startNum %}
@@ -14,8 +18,25 @@
         <tr>
             <td class="text-center" style="width: 60px;">{{ num }}</td>
             <td class="text-center" style="width: 60px;">{{ task.id }}</td>
-            <td>{{ task.title }}</td>
+            <td>
+                <div>{{ task.title }}</div>
+                {% if app.user %}
+                    <div id="rating_{{ task.id }}" class="rating-area">
+                        <input type="radio" id="star-5" name="rating" value="5">
+                        <label for="star-5" title="Оценка «5»"></label>
+                        <input type="radio" id="star-4" name="rating" value="4">
+                        <label for="star-4" title="Оценка «4»"></label>
+                        <input type="radio" id="star-3" name="rating" value="3">
+                        <label for="star-3" title="Оценка «3»"></label>
+                        <input type="radio" id="star-2" name="rating" value="2">
+                        <label for="star-2" title="Оценка «2»"></label>
+                        <input type="radio" id="star-1" name="rating" value="1">
+                        <label for="star-1" title="Оценка «1»"></label>
+                    </div>
+                {% endif %}
+            </td>
             <td>{{ task.content }}</td>
+            <td></td>
             {% if app.user %}
                 <td class="text-center" style="width: 300px;">
                     <button class="btn btn-outline-info" onclick="showTask({{ task.id }})">Открыть</button>
@@ -28,3 +49,45 @@
     </tbody>
 </table>
 {% include '/utils/paginator.html.twig' with {'block': 'pag_tasks'} %}
+
+<style>
+    .rating-area {
+        float: left;
+        margin: 0 auto;
+    }
+    .rating-area:not(:checked) > input {
+        display: none;
+    }
+    .rating-area:not(:checked) > label {
+        float: right;
+        padding: 0;
+        cursor: pointer;
+        font-size: 20px;
+        line-height: 1;
+        color: lightgrey;
+        text-shadow: 1px 1px #bbb;
+    }
+    .rating-area:not(:checked) > label:before {
+        content: '★';
+    }
+    .rating-area > input:checked ~ label {
+        color: gold;
+        text-shadow: 1px 1px #c60;
+    }
+
+    .rating-area:not(:checked) > label:hover,
+    .rating-area:not(:checked) > label:hover ~ label {
+        color: gold;
+    }
+    .rating-area > input:checked + label:hover,
+    .rating-area > input:checked + label:hover ~ label,
+    .rating-area > input:checked ~ label:hover,
+    .rating-area > input:checked ~ label:hover ~ label,
+    .rating-area > label:hover ~ input:checked ~ label {
+        color: gold;
+        text-shadow: 1px 1px goldenrod;
+    }
+    .rate-area > label:active {
+        position: relative;
+    }
+</style>
